--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SASS Tutorial template</title>
   </head>
   <body>
+    <button type="button" class="small-btn">Click me</button>
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
