--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>SASS Tutorial template</title>
   </head>
   <body>
-    <button type="button" class="small-btn">Click me</button>
+    <section class="section">
+      <h1 class="title">Page title</h1>
+      <p class="text">
+        Page text - Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Quidem neque iusto facilis maxime delectus, velit ut laboriosam hic
+        earum aut inventore accusantium impedit nihil veniam cumque quos quae
+        eos consequatur?
+      </p>
+    </section>
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
