--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>SASS Tutorial template</title>
   </head>
   <body>
-    <div class="badge badge-completed">Completed</div>
-    <div class="badge badge-active">Active</div>
-    <div class="badge badge-ended">Ended</div>
+    <div class="badge-completed">Completed</div>
+    <div class="badge-active">Active</div>
+    <div class="badge-ended">Ended</div>
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
